# raspberry-pi-stats

./: Dockerfile  app.py  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: docker-multiarch.yml
static/css/: newstyles.css  styles.css
static/favicon/: site.webmanifest
templates/: dashboard.html
