[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "raspberry-pi-stats"
version = "0.1.0"
description = "A Python project for monitoring Raspberry Pi system stats in real-time."
readme = "README.md"
authors = [
    { name = "Satish Yadav", email = "satishkumaryadav72@gmail.com" }
]
license = { file = "LICENSE" }
dependencies = [
    "flask",
    "flask-socketio",
    "psutil",
]
dynamic = ["classifiers"]

[project.optional-dependencies]
testing = ["pytest", "pytest-cov"]

[tool.setuptools]
packages = ["src"]
